Bug 1659404 - Fix non-MOZ_GECKO_PROFILER build - r=canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D88375